<resources>
    <string name="app_name">Weather App </string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_my_app">Share My App</string>
    <string name="alerts_amp_setting"><![CDATA[Alerts&Setting]]></string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="ok">Ok</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="location">Location</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="language">Language</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="done">Done</string>
    <string name="visibility">Visibility</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="selectstartdate">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_location">Select Location</string>


</resources>