<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/home"

            />
        <item android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_favorite"
            android:title="@string/favorite"/>
    </group>

    <item android:title="@string/alerts_amp_setting">
        <menu>
            <group android:checkableBehavior="single">
        <item android:id="@+id/nav_alarts"
            android:icon="@drawable/ic_baseline_add_alert_24"
            android:title="@string/alerts"/>
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>
    </group>
        </menu>
    </item>
    <item android:title="@string/share_my_app">
    <menu>
        <group android:checkableBehavior="single">
        <item android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share"/>
        </group>
    </menu>
    </item>
    </menu>