<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    app:cardCornerRadius="28dp"
    android:padding="16dp"
    android:layout_gravity="center"
    android:outlineAmbientShadowColor="@color/border_color"
    android:outlineSpotShadowColor="@color/border_color"
    android:background="@color/background"
    tools:context=".home.alertsfragment.view.AlertDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <TextView
            android:id="@+id/txtChooseAlertSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Choose Alert Settings..."
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/txtSelectStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableTop="@drawable/ic_date"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/selectstartdate"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtChooseAlertSettings"/>

        <TextView
            android:id="@+id/txtSelectEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_date"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/end_date"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtSelectStartDate" />

        <TextView
            android:id="@+id/txtSelectTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableTop="@drawable/ic_time"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/select_time"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtSelectStartDate"/>

        <TextView
            android:id="@+id/txtSelectLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableTop="@drawable/ic_add_location"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/select_location"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtSelectStartDate"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOkAlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTintMode="src_over"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/ok"
            android:textSize="22sp"
            app:backgroundTint="@color/second_color"
            app:cornerRadius="100dp"
            app:iconGravity="end"
            app:iconPadding="16dp"
            app:layout_constraintTop_toBottomOf="@id/txtSelectTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.3" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>